--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -4,9 +4,8 @@ this is create chain view
 
 <div id="topElement" onselectstart="return false;">
 
-    <div>
-        <canvas id="netBackground"></canvas>
-    </div>
+    <canvas id="netBackground"></canvas>
+    <canvas id="connectionBackground"></canvas>
     <canvas id="canvas" width="1000" height="500"></canvas>
 
 
