基本情况界面 导航栏及定位

--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -1,3 +1,42 @@
 <br>
 
 <label>基本情况</label>
+
+<!--跟随导航栏-->
+<div class="navBar">
+    <li><a class="nav_item active" href="#wholePic">全景图</a></li>
+    <li><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
+    <li><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
+    <li><a class="nav_item" href="#atlas_car">中国汽车图谱</a></li>
+</div>
+
+<div id="wholePic" class="part">
+    <h3><a href="#wholePic">全景图</a></h3>
+    <div class="wholePic">
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_2.png"/>
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_3.png"/>
+    </div>
+    <div class="wholePic">
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_1.png"/>
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_2.png"/>
+        <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_3.png"/>
+    </div>
+</div>
+
+<div id="chain_car" class="part">
+    <h3><a href="#chain_car">汽车产业链图</a></h3>
+    <img src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>
+</div>
+
+<div id="flowPath_car" class="part">
+    <h3><a href="#flowPath_car">汽车生产流程图</a></h3>
+    <img src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>
+</div>
+
+<div id="atlas_car" class="part">
+    <h3><a href="#atlas_car">中国汽车图谱</a></h3>
+    <img src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>
+</div>
+
+<link rel="stylesheet" href="view/macroIndustryDisplay/generalInfo/generalInfo.css"/>
