--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
@@ -17,9 +17,15 @@
     width: 20%;
     min-width: 200px;
 }
-
-.wholePic .partPic:hover{
-    transform: scale(1.5);
-    transition: all 0.6s;
+/*.wholePic .partPic:hover{*/
+    /*transform: scale(1.5);*/
+    /*transition: all 0.6s;*/
+/*}*/
+.nameAndList{
+    width: 150px;
 }
-
+.name_part{
+    width: 150px;
+    height: 30px;
+    cursor: pointer;
+}
