全景图中公司列表的定位

--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
@@ -1,7 +1,8 @@
 <br>
 
-<label>公司信息</label>
+<h2>公司信息</h2>
 
+<a href="" ng-click="goBack()">返回行业基本情况</a>
 <!--<div class="sidebar">-->
     <!--<div class="sidebar-inner">-->
         <!--<ul class="menu-root">-->
@@ -18,7 +19,7 @@
 <h3>公司介绍</h3>
 <table>
     <tr>
-        <td class="td_name">公司中文名称</td><td class="td_value" colspan="5">{{companyDetails.compNanme}}</td>
+        <td class="td_name">公司中文名称</td><td class="td_value" colspan="5">{{companyDetails.compName}}</td>
     </tr>
     <tr>
         <td class="td_name">公司英文名称</td><td class="td_value" colspan="5">{{companyDetails.compNameEng}}</td>
@@ -46,7 +47,7 @@
         <td class="td_name">经营范围</td><td class="td_value">{{companyDetails.business}}</td>
     </tr>
     <tr>
-        <td class="td_name">主营产品类型</td><td class="td_value">{{companyDetails.majorProdutType}}</td>
+        <td class="td_name">主营产品类型</td><td class="td_value">{{companyDetails.majorProductType}}</td>
     </tr>
     <tr>
         <td class="td_name">主营产品名称</td><td class="td_value">{{companyDetails.majorProductName}}</td>
@@ -86,7 +87,7 @@
     <tr>
         <td class="td_name">记账本位币</td><td class="td_value">{{companyDetails.reportCur}}</td>
         <td class="td_name">统一社会信用代码</td><td class="td_value">{{companyDetails.registerNumber}}</td>
-        <td class="td_name">组织机构代码</td><td class="td_value">{{companyDetails.orgnizationCode}}</td>
+        <td class="td_name">组织机构代码</td><td class="td_value">{{companyDetails.organizationCode}}</td>
     </tr>
     <tr>
         <td class="td_name">信息披露人</td><td class="td_value">{{companyDetails.disclose}}</td>
