--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -1,3 +1,7 @@
+a {
+    cursor: pointer;
+}
+
 #topElement{
     -moz-user-select:-moz-none;
 }
@@ -5,9 +9,7 @@
 #canvas{
     position: absolute;
     display: block;
-    left: 100px;
-    top: 150px;
-    cursor: pointer;
+    cursor: auto;
     border: 1px solid #CCCCCC;
     background: rgba(255,255,255,0);
     z-index: 1;
@@ -16,8 +18,6 @@
 #connectionBackground{
     position: absolute;
     display: block;
-    left: 100px;
-    top: 150px;
     border: 1px solid #CCCCCC;
     background: rgba(255,255,255,0);
     z-index: 0;
@@ -26,8 +26,6 @@
 #netBackground{
     position: absolute;
     display: block;
-    left: 100px;
-    top: 150px;
     border: 1px solid #CCCCCC;
     background: rgba(255,255,255,1);
     z-index: -1;
