--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -4,9 +4,9 @@ this is create chain view
 
 <div id="topElement" onselectstart="return false;">
 
-    <canvas id="netBackground"></canvas>
-    <canvas id="connectionBackground"></canvas>
-    <canvas id="canvas" width="1000" height="500"></canvas>
+    <canvas id="netBackground" style="left: 0; top: 0;"></canvas>
+    <canvas id="connectionBackground" style="left: 0; top: 0;"></canvas>
+    <canvas id="canvas" data-toggle="context" data-target="#canvas-menu" style="left: 0; top: 0;"></canvas>
 
 
     <div>
@@ -15,6 +15,20 @@ this is create chain view
 
     <div id="nodeDiv">
 
+    </div>
+
+    <div id="node-menu">
+        <ul class="dropdown-menu">
+            <li><a>修改</a></li>
+            <li class="divider"></li>
+            <li ng-click="deleteNode()"><a style="color: indianred">删除</a></li>
+        </ul>
+    </div>
+
+    <div id="canvas-menu">
+        <ul class="dropdown-menu">
+            <li ng-click="addNewNode()"><a>增加新的节点</a></li>
+        </ul>
     </div>
 
 </div>
