--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -4,32 +4,49 @@
 
 <!--跟随导航栏-->
 <div class="navBar">
-    <li><a class="nav_item active" href="#wholePic">全景图</a></li>
+    <hr class="vertical_line">
+    <li class="active"><a class="nav_item active" href="#wholePic">全景图</a></li>
     <li><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
     <li><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
     <li><a class="nav_item" href="#atlas_car">中国汽车图谱</a></li>
 </div>
 
+<!--<a ng-click="test_ajax()">TEST</a>-->
+
 <div id="wholePic" class="part">
     <h3><a href="#wholePic">全景图</a></h3>
     <div class="wholePic_container">
+        <!--<div class="wholePic">-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_2.png"/>-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_3.png"/>-->
+        <!--</div>-->
+        <!--<div class="wholePic">-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_1.png"/>-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_2.png"/>-->
+            <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_3.png"/>-->
+        <!--</div>-->
         <div class="wholePic">
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_2.png"/>
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_3.png"/>
-        </div>
-        <div class="wholePic">
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_1.png"/>
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_2.png"/>
-            <img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_3.png"/>
-        </div>
-        <div id="luntai" class="nameAndList">
-            <label class="name_part">轮胎</label>
-            <div class="list_part" style="display: none;">
-                <ul>
-                    <li ng-repeat="item in list_luntai"><a href="" ng-click="goToCompanyDetails(item)">{{item}}</a></li>
-                </ul>
+            <img class="wholeView" src="view/macroIndustryDisplay/generalInfo/pic/全景图.jpg"/>
+            <div class="companyList" style="display: none;">
+                <label class="name_part">{{category_toShow}}</label>
+                <div class="list_part">
+                    <ul>
+                        <li ng-repeat="item in list_toShow"><a href="" ng-click="goToCompanyDetails(item)">{{item.stkcd}}</a></li>
+                    </ul>
+                </div>
             </div>
+        </div>
+        <!--<div id="luntai" class="nameAndList">-->
+            <!--<label class="name_part">轮胎</label>-->
+            <!--<div class="list_part" style="display: none;">-->
+                <!--<ul>-->
+                    <!--<li ng-repeat="item in list_luntai"><a href="" ng-click="goToCompanyDetails(item)">{{item}}</a></li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+        <div id="luntai" name="轮胎" class="part_toTouch">
+            xxxxxxxxxxx
         </div>
     </div>
 </div>
