--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -1,3 +1,11 @@
+.bg_macro{
+    position: fixed;
+    top: 0;
+    background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62));
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 .dataPane{
     line-height: 20px;
     font-size: 10px;
@@ -10,4 +18,29 @@
     width: 74px;
     height: 120px;
     background-color:rgba(0, 0, 0, 0.7);
+    z-index: 102;
+}
+
+.header_macro{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    /*min-width: 1300px;*/
+    /*background: #00ccff;*/
+    background: transparent;
+    z-index: 101;
+}
+.header_macro .module_nav{
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+    margin: 0 auto;
+}
+.header_macro .module_nav .nav{
+    display: inline-block;
+    text-align: center;
+    line-height: 60px;
+    font-size: 14px;
+    color: #333;
+    cursor: pointer;
 }
