--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -4,6 +4,7 @@ a {
 
 #topElement{
     -moz-user-select:-moz-none;
+    overflow: auto;
 }
 
 #canvas{
@@ -31,9 +32,32 @@ a {
     z-index: -3;
 }
 
+#topToolBar{
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    height: 100px;
+    top: 0;
+    border-bottom: 1px solid #CCCCCC;
+    background: whitesmoke;
+}
+
+#leftToolBar{
+    position: fixed;
+    z-index: 2;
+    width: 150px;
+    height: 100%;
+    top: 100px;
+    border-right: 1px solid #CCCCCC;
+    background: whitesmoke;
+}
+#leftToolBar button{
+    width: 100%;
+}
+
 #addNodeBoard{
     position: absolute;
-    z-index: 3;
+    z-index: 10000;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -52,12 +76,13 @@ a {
 
 #editNodeBoard{
     position: absolute;
-    z-index: 3;
+    z-index: 10000;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     width: 200px;
     height: 250px;
+    left: 150px;
     border: 1px solid #CCCCCC;
     background: #FFF;
     border-radius: 4px;
@@ -71,13 +96,13 @@ a {
 
 .node{
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     display: flex;
     width: 80px;
     height: 40px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
-    background: whitesmoke;
+    background: #FFF;
     justify-content: center;
     align-items: center;
     cursor: pointer;
