公司详情页面添加http请求

--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
@@ -16,7 +16,7 @@ table tr td{
     /*background-color: #00ccff;*/
 }
 .td_value{
-    /*width: 300px;*/
-    /*min-width: 200px;*/
+    width: 300px;
+    min-width: 200px;
     /*background-color: #5bc0de;*/
 }
