--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -1,7 +1,7 @@
 <br>
 <script src="../../bower_components/echarts/dist/echarts.js"></script>
 
-<div class="bg_macro"></div>
+<!--<div class="bg_macro"></div>-->
 <!--顶部导航栏-->
 <header class="header_macro">
     <div class="module_nav">
