--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -5,16 +5,16 @@
 <!--跟随导航栏-->
 <div class="navBar">
     <hr class="vertical_line">
-    <li class="active"><a class="nav_item active" href="#wholePic">全景图</a></li>
+    <li class="active"><a class="nav_item active" href="#wholePic">汽车产业全景图</a></li>
     <li><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
     <li><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
-    <li><a class="nav_item" href="#atlas_car">中国汽车图谱</a></li>
+    <li><a class="nav_item" href="#atlas_car">中国汽车企业图谱</a></li>
 </div>
 
 <!--<a ng-click="test_ajax()">TEST</a>-->
 
 <div id="wholePic" class="part">
-    <h3><a href="#wholePic">全景图</a></h3>
+    <h3><a href="#wholePic">汽车产业全景图</a></h3>
     <div class="wholePic_container">
         <!--<div class="wholePic">-->
             <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>-->
@@ -62,7 +62,7 @@
 </div>
 
 <div id="atlas_car" class="part">
-    <h3><a href="#atlas_car">中国汽车图谱</a></h3>
+    <h3><a href="#atlas_car">中国汽车企业图谱</a></h3>
     <img src="view/macroIndustryDisplay/generalInfo/pic/中国汽车企业图谱.png"/>
 </div>
 
