--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -1,20 +1,21 @@
 <br>
 
-<label>基本情况</label>
+<!--<label>基本情况</label>-->
 
 <!--跟随导航栏-->
 <div class="navBar">
     <hr class="vertical_line">
-    <li class="active"><a class="nav_item active" href="#wholePic">汽车产业全景图</a></li>
-    <li><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
-    <li><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
-    <li><a class="nav_item" href="#atlas_car">中国汽车企业图谱</a></li>
+    <li class="active"><img class="icon_active" src="view/resource/汽车icon.png" style="display: initial"/><a class="nav_item active" href="#wholePic">汽车产业全景图</a></li>
+    <li><img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
+    <li><img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
+    <li><img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#atlas_car">中国汽车企业图谱</a></li>
 </div>
 
 <!--<a ng-click="test_ajax()">TEST</a>-->
 
 <div id="wholePic" class="part">
-    <h3><a href="#wholePic">汽车产业全景图</a></h3>
+    <!--<h3><a href="#wholePic">汽车产业全景图</a></h3>-->
+    <div class="blank"></div>
     <div class="wholePic_container">
         <!--<div class="wholePic">-->
             <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/1_1.png"/>-->
@@ -27,7 +28,10 @@
             <!--<img class="partPic" src="view/macroIndustryDisplay/generalInfo/pic/2_3.png"/>-->
         <!--</div>-->
         <div class="wholePic">
-            <img class="wholeView" src="view/macroIndustryDisplay/generalInfo/pic/全景图.jpg"/>
+            <!--<img class="wholeView" src="view/macroIndustryDisplay/generalInfo/pic/全景图.jpg"/>-->
+            <img class="wholeView" src="view/resource/全景图本体.png"/>
+            <img class="wholeView cover" src="view/resource/全景图本体-变暗.png"/>
+            <div class="touchDescription"><img src="view/resource/轻触部件.png"/></div>
             <div class="companyList" style="display: none;">
                 <label class="name_part">{{category_toShow}}</label>
                 <div class="list_part">
