--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -1,15 +1,19 @@
-/*.bg_macro{*/
-    /*position: fixed;*/
-    /*top: 0;*/
+.bg_macro{
+    position: fixed;
+    top: 0;
     /*background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62));*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*z-index: -1;*/
-/*}*/
+    background: url(/view/resource/背景.png) no-repeat;
+    -webkit-background-size: 100%;
+    /*background-size: 100%;*/
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
 body{
-    background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62)) no-repeat;
-    background-size: cover;
-    min-height: 100vh;
+    /*background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62)) no-repeat;*/
+    /*background: url(/view/resource/背景.png);*/
+    /*background-size: cover;*/
+    /*min-height: 100vh;*/
 }
 
 .dataPane{
