--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -53,7 +53,7 @@ a {
 #leftToolBar{
     position: fixed;
     z-index: 2;
-    width: 150px;
+    width: 180px;
     height: 100%;
     top: 100px;
     border-right: 1px solid #CCCCCC;
@@ -64,8 +64,34 @@ a {
     flex-flow: row wrap;
     width: 100%;
     padding: 5px;
-    border-bottom: 1px solid #CCCCCC;
+    border-bottom: 3px solid #AAAAAA;
     background: white;
+}
+#leftToolBar .historyBlock{
+    width: 100%;
+    height: 150px;
+    border-bottom: 1px solid #CCCCCC;
+    resize: vertical;
+    overflow:auto;
+    background: white;
+}
+#leftToolBar .historyBlock .historyBlockCell{
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+    height: 40px;
+    padding: 5px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    border: 1px solid #CCCCCC;
+    background: whitesmoke;
+}
+#leftToolBar .historyBlock .historyBlockCell div{
+    display: block;
+    width: 65%;
+}
+#leftToolBar .historyBlock .historyBlockCell button{
+    width: 35%;
 }
 
 #addNodeBoard{
