新增：完整版 全景图特效（所有部件的高亮，点击锁定，锁定之后高亮，取消锁定）

--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -31,6 +31,15 @@
             <!--<img class="wholeView" src="view/macroIndustryDisplay/generalInfo/pic/全景图.jpg"/>-->
             <img class="wholeView" src="view/resource/全景图本体.png"/>
             <img class="wholeView cover" src="view/resource/全景图本体-变暗.png"/>
+            <img class="wholeView cover part_009" src="view/resource/009.png"/>
+            <img class="wholeView cover part_008" src="view/resource/008.png"/>
+            <img class="wholeView cover part_007" src="view/resource/007.png"/>
+            <img class="wholeView cover part_006" src="view/resource/006.png"/>
+            <img class="wholeView cover part_005" src="view/resource/005.png"/>
+            <img class="wholeView cover part_004" src="view/resource/004.png"/>
+            <img class="wholeView cover part_003" src="view/resource/003.png"/>
+            <img class="wholeView cover part_002" src="view/resource/002.png"/>
+            <img class="wholeView cover part_001" src="view/resource/001.png"/>
             <div class="touchDescription"><img src="view/resource/轻触部件.png"/></div>
             <div class="companyList" style="display: none;">
                 <label class="name_part">{{category_toShow}}</label>
@@ -40,6 +49,24 @@
                     </ul>
                 </div>
             </div>
+            <div id="part_009" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_008" name="行驶底盘设备（含转向设备+制动设备+传动设备+行驶设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
+            <div id="part_007_1" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
+            <div id="part_007_2" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
+            <div id="part_007_3" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
+            <div id="part_007_4" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
+            <div id="part_006_1" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
+            <div id="part_006_2" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
+            <div id="part_006_3" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
+            <div id="part_006_4" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
+            <div id="part_005" name="玻璃" class="part_toTouch part_005" style="opacity: 0;"></div>
+            <div id="part_004_1" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_2" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_3" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_4" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_003" name="合成材料+车身及外观设备" class="part_toTouch part_003" style="opacity: 0;"></div>
+            <div id="part_002" name="纺织品" class="part_toTouch part_002" style="opacity: 0;"></div>
+            <div id="part_001" name="电气仪器仪表+转向设备" class="part_toTouch part_001" style="opacity: 0;"></div>
         </div>
         <!--<div id="luntai" class="nameAndList">-->
             <!--<label class="name_part">轮胎</label>-->
@@ -49,9 +76,6 @@
                 <!--</ul>-->
             <!--</div>-->
         <!--</div>-->
-        <div id="luntai" name="轮胎" class="part_toTouch">
-            xxxxxxxxxxx
-        </div>
     </div>
 </div>
 
