--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
@@ -70,7 +70,8 @@
     transition: all 0.3s;
 }
 .wholePic .wholeView.active{
-    transform: translateX(-15%);
+    /*transform: translateX(-15%);*/
+    transform: translateX(-210px);
 }
 .wholePic .wholeView.cover{
     position: absolute;
@@ -104,10 +105,11 @@
     /*cursor: pointer;*/
 }
 .companyList{
-    width: 35%;
+    width: 30%;
     /*display: inline-block;*/
     position: absolute;
-    right: 0;
+    /*right: 0;*/
+    left: 900px;
     top:0;
     min-width: 430px;
     padding: 30px 0 0 50px;
@@ -115,12 +117,136 @@
 .part_toTouch{
     cursor: pointer;
     background: #00ccff;
+    transition: all 0.3s;
+    /*opacity: 0;*/
+}
+.part_toTouch.active {
+    transform: translateX(-210px);
 }
 /*单独每个的定位*/
-#luntai{
+#part_001{
     position: absolute;
-    top:50px;
-    left:100px;
+    top:110px;
+    left:618px;
+    width: 130px;
+    height: 110px;
+}
+#part_002{
+    position: absolute;
+    top:30px;
+    left: 630px;
+    width: 180px;
+    height: 180px;
+}
+#part_003{
+    position: absolute;
+    top: 6px;
+    left: 560px;
+    width: 296px;
+    height: 220px;
+}
+#part_004_1{
+    position: absolute;
+    top: 480px;
+    left: 305px;
+    width: 100px;
+    height: 80px;
+}
+#part_004_2{
+    position: absolute;
+    top: 540px;
+    left: 413px;
+    width: 103px;
+    height: 80px;
+}
+#part_004_3{
+    position: absolute;
+    top: 205px;
+    left: 820px;
+    width: 60px;
+    height: 50px;
+}
+#part_004_4{
+    position: absolute;
+    top: 268px;
+    left: 940px;
+    width: 60px;
+    height: 50px;
+}
+#part_005{
+    position: absolute;
+    top: 308px;
+    left: 580px;
+    width: 163px;
+    height: 126px;
+}
+#part_006_1{
+    position: absolute;
+    top: 380px;
+    left: 259px;
+    width: 245px;
+    height: 180px;
+}
+#part_006_2{
+    position: absolute;
+    top: 295px;
+    left: 504px;
+    width: 183px;
+    height: 284px;
+}
+#part_006_3{
+    position: absolute;
+    top: 225px;
+    left: 687px;
+    width: 223px;
+    height: 328px;
+}
+#part_006_4{
+    position: absolute;
+    top: 85px;
+    left: 830px;
+    width: 220px;
+    height: 310px;
+}
+#part_007_1{
+    position: absolute;
+    top: 316px;
+    left: 323px;
+    width: 137px;
+    height: 117px;
+}
+#part_007_2{
+    position: absolute;
+    top: 187px;
+    left: 523px;
+    width: 143px;
+    height: 117px;
+}
+#part_007_3{
+    position: absolute;
+    top: 397px;
+    left: 908px;
     width: 150px;
-    height: 150px;
+    height: 125px;
+}
+#part_007_4{
+    position: absolute;
+    top: 530px;
+    left: 704px;
+    width: 140px;
+    height: 105px;
+}
+#part_008{
+    position: absolute;
+    top: 510px;
+    left: 482px;
+    width: 420px;
+    height: 245px;
+}
+#part_009{
+    position: absolute;
+    top: 523px;
+    left: 442px;
+    width: 522px;
+    height: 334px;
 }
